--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -14,13 +14,16 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@cloudflare/workers-oauth-provider": "^0.0.6",
     "@modelcontextprotocol/sdk": "1.13.1",
     "@sentry/cloudflare": "^9.16.0",
     "agents": "^0.0.100",
     "hono": "^4.8.3",
     "just-pick": "^4.2.0",
     "octokit": "^5.0.3",
-    "workers-mcp": "^0.0.13"
+    "postgres": "^3.4.7",
+    "workers-mcp": "^0.0.13",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.8.53",
