major cleanup - remove Vercel deployment artifacts and outdated docs
  Deployment cleanup:
  - Remove .vercelignore and vercel.json files (no longer using Vercel)
  - Remove docs/ directory (Vercel-specific ASGI, API, testing docs)
  - Keep UI/.nvmrc for Node.js version consistency

  Documentation cleanup:
  - Remove outdated deployment docs (DEPLOYMENT_REVIEW_SUMMARY.md, PRODUCTION_*)
  - Remove initial project docs (INITIAL.md, LAUNCH_ANNOUNCEMENT.md, PROJECT_OVERVIEW.md)
  - Update CLAUDE.md, README.md, and TASK.md with current project state

  Configuration updates:
  - Update .gitignore and .kilocode/mcp.json
  - Update .claude/settings.local.json for current workflow
  - Clean requirements.txt, remove requirements.prod.txt

  Code improvements:
  - Add new Gemini embeddings service (src/services/embeddings_gemini.py)
  - Update embeddings.py and production middleware
  - Update UI components (page.tsx, useArticles.ts, package.json)
  - Add GitHub Actions direct execution spec

  Testing cleanup:
  - Remove obsolete test files (test_production_fetch.py, test_setup.py)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,3 @@
-# Core
-fastapi
-uvicorn[standard]
-pydantic>=2.5.0
-pydantic-settings
-pydantic-ai
-python-dotenv
-
-# Data fetching
-arxiv
-feedparser
-httpx
-aiohttp
-
-# AI/ML
-sentence-transformers
-
-# Database
+# Minimal working dependencies for Vercel
 supabase
-sqlalchemy
-
-# Utilities
-tenacity
-aiofiles
-
-# Audio/TTS
-elevenlabs
-
-# Dev/Test
-pytest
-pytest-asyncio
-pytest-mock
-ruff
-mypy
-# Caching
-cachetools
+httpx
