--- a/UI/package.json
+++ b/UI/package.json
@@ -20,9 +20,9 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
-    "react": "19.1.0",
+    "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-select": "^5.8.0",
     "swr": "^2.3.4",
@@ -32,8 +32,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20.19.9",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
